# asteroid-destroyer-sdl

./: .clang-format  .clangd  .clangd.macos  .clangd.windows  .gitignore  CMakeLists.txt  DEVELOPMENT_GUIDE.md  README.md  compile_flags.txt  switch_clangd.bat  switch_clangd_macos.sh  vcpkg.json
.cache/clangd/index/: Availability.h.02304541EB8AFE2F.idx  AvailabilityInternal.h.53F18B56F5AA10C5.idx  AvailabilityInternalLegacy.h.5CA14FCCEABDF7BF.idx  AvailabilityMacros.h.98E46884BB4E741D.idx  AvailabilityVersions.h.8BD8C7C2D0D5A55C.idx  Player.cpp.DFC0B2322287643C.idx  Player.cpp.E960794BFA0A4D2F.idx  Player.hpp.6EE2E5EE72286A9D.idx  Player.hpp.DBAFC2085BB9E32E.idx  SDL.h.6197907C17D1DF74.idx  SDL.h.9DDB0E616FE667AE.idx  SDL.h.CF8A3B6F04BB7EC4.idx  SDL_assert.h.2D8D89301B286BD1.idx  SDL_assert.h.FC7EC905C4F1B92C.idx  SDL_atomic.h.23A0F2FD215B4A65.idx  SDL_atomic.h.C52DB9788A5A37BD.idx  SDL_audio.h.E6144AFC1EC7A449.idx  SDL_audio.h.F238E5AE3C0C3610.idx  SDL_blendmode.h.5495F81D97D54A85.idx  SDL_blendmode.h.8425647D31A34A12.idx  SDL_blendmode.h.AF8F62E15D5FD901.idx  SDL_clipboard.h.6A7E1F7CE6F9A179.idx  SDL_clipboard.h.A539CC965BFF034B.idx  SDL_config.h.03954D26ED20C7D7.idx  SDL_config.h.297FBBA1A438E300.idx  SDL_config.h.DD9EF42545E7D856.idx  SDL_config_macosx.h.3B05B5CF4BB54446.idx  SDL_config_macosx.h.FB07AFC50F5EE342.idx  SDL_cpuinfo.h.714865B816AC95C1.idx  SDL_cpuinfo.h.EB876B835E171901.idx  SDL_endian.h.1A434CBC24D84BFA.idx  SDL_endian.h.999F6D75C9EA3EE1.idx  SDL_endian.h.F9457EC07690C133.idx  SDL_error.h.00C38B48D334E939.idx  SDL_error.h.A26FB324438106F1.idx  SDL_error.h.EF342F9674B4C9BF.idx  SDL_events.h.0F82CD44F1C7D908.idx  SDL_events.h.BA2B5F9E9627E105.idx  SDL_filesystem.h.11D2F5A3CEC3FE75.idx  SDL_filesystem.h.DAF45F1083C0C25F.idx  (+1141 more)
.github/: PULL_REQUEST_TEMPLATE.md
include/SDL2/: SDL_video.h
src/: Player.cpp  Player.hpp  asteroid.cpp  asteroid.hpp  createwindow.cpp  createwindow.hpp  main.cpp  score.cpp  score.hpp  weapon.cpp  weapon.hpp
src/holder/: text.txt
